--- a/src/style/components/madlib_form.scss
+++ b/src/style/components/madlib_form.scss
@@ -9,7 +9,7 @@
 .card {
   width: 86vw;
   border-radius: 7px;
-  box-shadow: 0 4px 30px 0 rgba(0,0,0, 0.75);
+  box-shadow: 0 4px 30px 0 rgba(0, 0, 0, 0.75);
   padding: 50px 80px;
 }
 
@@ -38,8 +38,24 @@ input {
   background-color: $bottegaGreen;
   border-radius: 100px;
   width: 26px;
-  height: 26px; 
+  height: 26px;
   font-size: 18px;
   text-align: center;
   color: white;
+}
+
+.generate-button {
+  height: 50px;
+  width: 300px;
+  border-radius: 4px;
+  background-color: $bottegaGreen;
+  color: white;
+  font-size: 1.25em;
+  // font-weight: 500;
+}
+
+.button-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
