--- a/src/style/components/madlib_form.scss
+++ b/src/style/components/madlib_form.scss
@@ -25,7 +25,7 @@ input {
   text-align: center;
   font-weight: 500;
   width: 100%;
-  outline: none;
+  // outline: none;
 }
 
 .input-description {
@@ -44,18 +44,26 @@ input {
   color: white;
 }
 
-.generate-button {
-  height: 50px;
-  width: 300px;
-  border-radius: 4px;
-  background-color: $bottegaGreen;
-  color: white;
-  font-size: 1.25em;
-  // font-weight: 500;
-}
-
 .button-wrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.generate-button {
+  @include buttonStyles;
+  background-color: $bottegaGreen;
+}
+
+.clear-button {
+  @include buttonStyles;
+  background-color: $clearBlue;
+  padding-top: 9px;
+  text-align: center; 
+  // outline: none;
+}
+
+input:focus,
+button:focus {
+  outline: none;
 }
