added label styles to content component

--- a/src/style/components/madlib_content.scss
+++ b/src/style/components/madlib_content.scss
@@ -12,3 +12,19 @@
   margin-top: -23px;
   border-radius: 10px;
 }
+
+.black-label {
+  background-color: black;
+  border-radius: 50%;
+  width: 18px;
+  height: 18px;
+  font-size: 12px;
+  text-align: center;
+  color: white;
+  margin: 5px;
+}
+
+.bold-text {
+  color: $clearBlue;
+  
+}
